[gd_scene load_steps=11 format=3 uid="uid://d2f6dhxp12xvl"]

[ext_resource type="Script" uid="uid://fu2kckns10ua" path="res://scenes/ui/character_selector.gd" id="1_lqh53"]
[ext_resource type="Resource" uid="uid://bd874b0h1q8n1" path="res://scenes/run/run_startup.tres" id="2_rlyfg"]
[ext_resource type="Texture2D" uid="uid://c25yypxnyqkcq" path="res://art/background art game.png" id="3_txrk6"]
[ext_resource type="Texture2D" uid="uid://cgse3mxwheeob" path="res://art/sir_punchalot_sprite.png" id="4_txrk6"]
[ext_resource type="Texture2D" uid="uid://cgxlp7x7yxp60" path="res://art/Nurse_Sprite.png" id="5_gl58c"]
[ext_resource type="Texture2D" uid="uid://c1gyga1a8stkk" path="res://art/catticus_sprite.png" id="5_txrk6"]
[ext_resource type="Texture2D" uid="uid://b1imrtxquxmnd" path="res://art/streak_sprite.png" id="6_gl58c"]

[sub_resource type="LabelSettings" id="LabelSettings_rnxpd"]
line_spacing = 10.0
shadow_size = 4
shadow_color = Color(0.54902, 0.443137, 0.376471, 0.333333)

[sub_resource type="LabelSettings" id="LabelSettings_aveil"]
line_spacing = 6.0
font_size = 12
shadow_size = 4
shadow_color = Color(0.54902, 0.443137, 0.376471, 0.333333)

[sub_resource type="ButtonGroup" id="ButtonGroup_2s2at"]

[node name="CharacterSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lqh53")
run_startup = ExtResource("2_rlyfg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(128, 69.5625)
scale = Vector2(0.25, 0.14148)
texture = ExtResource("3_txrk6")

[node name="CharacterText" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -89.0
offset_top = 18.0
offset_right = 211.0
offset_bottom = 77.0
grow_horizontal = 2
scale = Vector2(0.6, 0.6)

[node name="Title" type="Label" parent="CharacterText"]
unique_name_in_owner = true
layout_mode = 2
text = "Warrior"
label_settings = SubResource("LabelSettings_rnxpd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="CharacterText"]
unique_name_in_owner = true
layout_mode = 2
text = "Likes to slice things up.
Second line of text."
label_settings = SubResource("LabelSettings_aveil")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharacterPortrait" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -78.0
offset_right = 70.0
offset_bottom = -18.0
grow_vertical = 0
texture = ExtResource("4_txrk6")
expand_mode = 1
stretch_mode = 5

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -24.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "Start"

[node name="CharacterButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = 3.0
offset_right = 94.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="WarriorButton" type="Button" parent="CharacterButtons"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_2s2at")

[node name="Icon" type="TextureRect" parent="CharacterButtons/WarriorButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_txrk6")
expand_mode = 1
stretch_mode = 5

[node name="WizardButton" type="Button" parent="CharacterButtons"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_2s2at")

[node name="Icon" type="TextureRect" parent="CharacterButtons/WizardButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -6.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_txrk6")
expand_mode = 1
stretch_mode = 5

[node name="AssassinButton" type="Button" parent="CharacterButtons"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_2s2at")

[node name="Icon" type="TextureRect" parent="CharacterButtons/AssassinButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.5
offset_top = -11.0
offset_right = 10.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_gl58c")
expand_mode = 1
stretch_mode = 5

[node name="StreakButton" type="Button" parent="CharacterButtons"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_2s2at")

[node name="Icon" type="TextureRect" parent="CharacterButtons/StreakButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.483
anchor_top = 0.5
anchor_right = 0.483
anchor_bottom = 0.533
offset_left = -12.49
offset_top = -9.0
offset_right = 12.51
offset_bottom = 11.01
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_gl58c")
expand_mode = 1
stretch_mode = 5

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CharacterButtons/WarriorButton" to="." method="_on_warrior_button_pressed"]
[connection signal="pressed" from="CharacterButtons/WizardButton" to="." method="_on_wizard_button_pressed"]
[connection signal="pressed" from="CharacterButtons/AssassinButton" to="." method="_on_assassin_button_pressed"]
[connection signal="pressed" from="CharacterButtons/StreakButton" to="." method="_on_streak_button_pressed"]
